[gd_scene load_steps=7 format=3 uid="uid://8ihgsewdahsm"]

[ext_resource type="Texture2D" uid="uid://3734tf8mh3nq" path="res://images/PNG/background.png" id="1_4amh7"]
[ext_resource type="Script" path="res://main.gd" id="1_ku0ke"]
[ext_resource type="PackedScene" uid="uid://dhfjufv40ovfi" path="res://rock.tscn" id="2_3end2"]
[ext_resource type="PackedScene" uid="uid://ccnppjyfbv02y" path="res://plane.tscn" id="2_vhqtf"]
[ext_resource type="PackedScene" uid="uid://svigufxmc6cv" path="res://ground.tscn" id="4_cjlfp"]
[ext_resource type="PackedScene" uid="uid://8k66oe85d4ae" path="res://game_over.tscn" id="6_4pj83"]

[node name="Main" type="Node"]
script = ExtResource("1_ku0ke")
rock_scene = ExtResource("2_3end2")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(1.7, 1.7)
texture = ExtResource("1_4amh7")
offset = Vector2(400, 240)

[node name="Plane" parent="." instance=ExtResource("2_vhqtf")]

[node name="Ground" parent="." instance=ExtResource("4_cjlfp")]
z_index = 1

[node name="RockTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="ScoreLabel" type="Label" parent="."]
z_index = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -30.5
offset_right = 30.5
offset_bottom = 23.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.427451)
theme_override_font_sizes/font_size = 32
text = "Score: 0"

[node name="GameOver" parent="." instance=ExtResource("6_4pj83")]

[connection signal="hit" from="Ground" to="." method="_on_ground_hit"]
[connection signal="timeout" from="RockTimer" to="." method="_on_rock_timer_timeout"]
[connection signal="restart" from="GameOver" to="." method="_on_game_over_restart"]
